Account for the missing share button area on related strip, resize related on window resize, widen related strip, fix popup z-index

--- a/durandal02/css/app.css
+++ b/durandal02/css/app.css
@@ -873,7 +873,7 @@ div.map .marker i {
 }
 
 #related-videos-block {
-    width: 280px;
+    width: 282px;
 }
 
 #related-videos-block p {
